--- a/integratedApps.html
+++ b/integratedApps.html
@@ -136,7 +136,8 @@ a.two:hover {color: #447EAE; text-decoration: none;}
          <div class=headline>O365 Integrated Apps troubleshooting</div>
 	      <div class=datestamp>28-May-24</div>
         <div class=content><br>
-
+Linked Article: <a href='https://smwk.github.io/integratedApp.html'>Further troubleshooting Integrated Apps</a><br>
+<br>
 Until recently I let my cloud admin handle Outlook add-ins aka Integrated Apps. The policy was to block all apps entirely to reduce the number of potential data leaks and security holes.<br>
           <br>
   Now though, I've been asked to deploy the Microsoft add-in 'Report Phishing' and configure the options.<br>
