--- a/powershellParallel.html
+++ b/powershellParallel.html
@@ -159,7 +159,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
           <br>
           While Runspaces in PowerShell 5.1 are native, they are not easily setup, so after some trial and error I settled on the excellent PS Module from Boe Prox, <a href='https://github.com/proxb/PoshRSJob'>PoshRSJob</a>. The module allows for easy creation of runspaces and has settings for throttle and timeout.<br>
           <br>
-          After recently moving all my scripts to PowerShell Core (7.1) I wanted to try out the native <a href='https://devblogs.microsoft.com/powershell/powershell-foreach-object-parallel-feature/'>foreach parallel</a> option, but was disappointed at the speed at which it worked and seemingly no imporvement in memory management.<br>
+          After recently moving all my scripts to PowerShell Core (7.1) I wanted to try out the native <a href='https://devblogs.microsoft.com/powershell/powershell-foreach-object-parallel-feature/'>foreach parallel</a> option, but was disappointed at the speed at which it worked and seemingly no improvement in memory management.<br>
           <br>
           But how exactly do the two compare?<br>
           <br>
