--- a/integratedApp.html
+++ b/integratedApp.html
@@ -175,6 +175,9 @@ This article is in addition to a <a href='https://smwk.github.io/integratedApps.
 		<img src=integratedApp03.png class=ImageMain>
 		<div class=ImageCaption>↑ Add-in greyed out when viewing some folders.</div>
 		<br>
+		<br>
+		<b>Issue 3:</b> Add-in is installed but not visible in the Ribbon menu.<br>
+		One user reported that the add-in was not visible in the ribbon menu for any folder he had open in Outlook.<br>
           <br><br>
           </div>
           
