--- a/powershellParallel.html
+++ b/powershellParallel.html
@@ -165,7 +165,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
           <br>
           <b>Test:</b> ping 1,800 computers in parallel.<br>
           PoshRSJob: xx seconds<br>
-          Foreach Parallel: xx seconds<br>
+          Foreach Parallel: 19 seconds<br>
           <br><br>
           </div>
           
