--- a/powershellParallel.html
+++ b/powershellParallel.html
@@ -164,7 +164,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
           But how exactly do the two compare?<br>
           <br>
           <b>Test:</b> ping 1,800 computers in parallel.<br>
-          PoshRSJob: xx seconds<br>
+          PoshRSJob: 11 seconds<br>
           Foreach Parallel: 19 seconds<br>
           <br><br>
           </div>
