--- a/integratedApp.html
+++ b/integratedApp.html
@@ -167,6 +167,13 @@ This article is in addition to a <a href='https://smwk.github.io/integratedApps.
 		<br>
 		<b>Resolution:</b> setting the integrated app to 'mandatory' installed the app for all users who didn't already have it. Note, that this can't be seen in the new portal currently, so either use the old Add-Ins portal or use PowerShell.<br>
 		<br>
+		<div class=code>
+		Install-PSResource O365CentralizedAddInDeployment -Scope allusers<br>
+		Import-Module O365CentralizedAddInDeployment<br>
+		<br>
+		Connect-OrganizationAddInService<br>
+		Get-OrganizationAddIn -ProductId "xxx" | select DefaultStateForUser<br>
+		</div>
 		<br>
 		<b>Issue 2:</b> Add-in is greyed out for certain folders.<br>
 		The 'Report Phishing' add-in is only meant for your primary mailbox and is not available in webmail (OWA). One user said that he could see the add-in, but on most of his own folders the add-in was greyed out in the ribbon menu.
