--- a/powershellParallel.html
+++ b/powershellParallel.html
@@ -157,18 +157,23 @@ a.two:hover {color: #447EAE; text-decoration: none;}
           <br>
           There were a few trade-offs, CPU and memory usage can be very high, and there can be memory leaks and processes that don't get removed after the runspace completes. But, overall using runspaces is a much better way to scan a network.<br>
           <br>
-          While Runspaces in PowerShell 5.1 are native, they are not easily setup, so after some trial and error I settled on the excellent PS Module from Boe Prox, <a href='https://github.com/proxb/PoshRSJob'>PoshRSJob</a>. The module allows for easy creation of runspaces and has settings for throttle and timeout.<br>
+          While Runspaces in PowerShell 5.1 are native, they are not easily set-up, so after some trial and error I settled on the excellent PS Module from Boe Prox, <a href='https://github.com/proxb/PoshRSJob'>PoshRSJob</a>. The module allows for easy creation of runspaces and has settings for throttle and timeout.<br>
           <br>
           After recently moving all my scripts to PowerShell Core (7.1) I wanted to try out the native <a href='https://devblogs.microsoft.com/powershell/powershell-foreach-object-parallel-feature/'>foreach parallel</a> option, but how does it compare?<br>
           <br>
-          <b>Test:</b> ping 1,800 computers in parallel, throttle set to 200.<br>
+          <b>Test 1:</b> ping 2,000 computers in parallel, throttle set to 200.<br>
           PoshRSJob: 18 seconds<br>
           Foreach Parallel: 19 seconds<br>
 		<br>
-		Both handled memory usage well, with the Pwsh.exe hitting a max of 400MB.<br>
+		In this test, both handled memory usage well, with the Pwsh.exe hitting a max of 400MB.<br>
 		<br>
-		So from the results, we can see that both methods are pretty much equal. PoshRSJob has a progress option, while ForEach Parallel has the advantage of being a built-in process. Given that PoshRSJob no longer seems to be maintained, I will probably start to move my scripts to ForEach Parallel.<br>
-		
+	<b>Test 2:</b> ping 2,000 computers in parallel, then test the SMB port.<br>
+	  PoshRSJob: 60 seconds<br>
+          Foreach Parallel: failed<br>
+		<br>
+		As soon as the scriptblock gets a bit more complicated we see major problems with ForEach Parallel. The memory usage exceeded 4.5GB and was still rising when I killed the process. No results were returned when the script finished, though I'm not exactly sure why. In comparison the PoshRSJob worked as expected with only a slight increase in memory.<br>
+		<br>
+		For now, I will continue to use PoshRSJob. Generally when I'm checking all computers on the network I'm looking for a setting in the registry or via CIM, not just to simply ping them.
           <br><br>
           </div>
           
