--- a/integratedApp.html
+++ b/integratedApp.html
@@ -184,7 +184,9 @@ This article is in addition to a <a href='https://smwk.github.io/integratedApps.
 		<br>
 		<br>
 		<b>Issue 3:</b> Add-in is installed but not visible in the Ribbon menu.<br>
-		One user reported that the add-in was not visible in the ribbon menu for any folder he had open in Outlook.<br>
+		Two users reported that the add-in was not visible in the ribbon menu for any folder they had open in Outlook.<br>
+		<br>
+		<b>Resolution:</b> creating a new Outlook profile resolved the issue for one user, the other user did not report back.<br>
           <br><br>
           </div>
           
