--- a/quarantineDelete.html
+++ b/quarantineDelete.html
@@ -158,7 +158,7 @@ You go to your Office365 Quarantine, you delete an email, making sure to tick th
 		<br>
 		
 		<br>
-          This seems to have occurred for a number of O365 users over the last few years, alas a permanent fix does not seem to be forthcoming from Microsoft.<br>
+          <b>Resolution:</b> this seems to have occurred for several O365 users over the last few years, the issue seems to come and go and there appears to be no official fix for this.<br>
           
           <br><br>
           </div>
