--- a/automateUserCreation.html
+++ b/automateUserCreation.html
@@ -204,7 +204,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
           <br>
 	  <br>
           <b>4. Build User Creation Script from Excel File</b><br>
-          My user creation process is made up of two parts, a PHP front-end that saves the entries to a text file, and a PowerShell script that reads this text file and creates the user mailbox. The first step to validate is on the PHP page where users can select what OU the user should be created in. These OUs get changed reularly so the best way to keep updated is to use the Excel file to update a text field that will be included in the PHP page.<br>
+          My user creation process is made up of two parts, a PHP front-end that saves the entries to a text file, and a PowerShell script that reads this text file and creates the user mailbox. The first step to validate is on the PHP page where users can select what OU the user should be created in. These OUs get changed regularly so the best way to keep updated is to use the Excel file to update a text field that will be included in the PHP page.<br>
           <br>
           To keep managers updated when an OU is changed I also added an email alert when an OU from the Excel file is not found in Active Directory (AD).<br>
           <br>
