--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
   <div class="dropdown-content" style='line-height: 1.6;'>
 	  <details open>
 		    <summary><b>2024</b><br></summary>
+		  <a href="deleteItems.html" class=two>Deleting items from Recoverable Items</a>
 		  <a href="powershellParallel.html" class=two>PoshRSJob v PowerShell Core Parallel shootout</a>
 		   <a href="integratedApp.html" class=two>Integrated App deployment issues</a><br>
 		  <a href="mailUser.html" class=two>Mailbox appears as Mail User in O365</a><br>
@@ -146,6 +147,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	      <table class=indexTable> 
 		      <br>
 		     <tr><td> <br><b>2024</b></td><td></td></tr>
+	<tr><td><a href="deleteItems.html" class=two>Deleting items from Recoverable Items</a><br></td><td>01-Nov-24</td></tr>	    
 	<tr><td><a href="powershellParallel.html" class=two>PoshRSJob v PowerShell Core Parallel shootout</a><br></td><td>21-Sep-24</td></tr>	      
 	<tr><td><a href="integratedApp.html" class=two>Integrated App deployment issues</a><br></td><td>19-Sep-24</td></tr>
 	<tr><td><a href="mailUser.html" class=two>Mailbox appears as Mail User in O365</a><br></td><td>06-Sep-24</td></tr>
