--- a/powershellParallel.html
+++ b/powershellParallel.html
@@ -79,6 +79,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
   <div class="dropdown-content" style='line-height: 1.6;'>
 	  <details open>
 		    <summary><b>2024</b><br></summary>
+		  <a href="deleteItems.html" class=two>Deleting items from Recoverable Items</a><br>
 		  <a href="powershellParallel.html" class=two>PoshRSJob v PowerShell Core Parallel shootout</a>
 		  <a href="integratedApp.html" class=two>Integrated App deployment issues</a><br>
 		  <a href="mailUser.html" class=two>Mailbox appears as Mail User in O365</a><br>
