--- a/deleteItems.html
+++ b/deleteItems.html
@@ -161,7 +161,7 @@ Set-Mailbox user@domain.com -RetainDeletedItemsFor 0<br>
 Set-Mailbox user@domain.com -SingleItemRecoveryEnabled $false<br>
 </div>
           3. In Outlook, delete items and empty 'Recover Deleted Items'.<br>
-          4. Download MFCMapi, logon to the mailbox, expand 'Recoverable Items' and select 'DiscoveryHolds'. Right-click on this folder, select 'Advance', then select 'Empty items and subfolders from folder' with the 'Hard Deletio' checkbox checked.<br>
+          4. Download MFCMapi, logon to the mailbox, expand 'Recoverable Items' and select 'DiscoveryHolds'. Right-click on this folder, select 'Advanced', then select 'Empty items and subfolders from folder' with the 'Hard Deletion' checkbox checked.<br>
 <br>
           You may come across a few issues, if you see MFCMapi return the following error then you can ignore it once the 'Deletions' folder is reduced:<br>
           <div class=code>
