--- a/deleteItems.html
+++ b/deleteItems.html
@@ -80,7 +80,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	  <details open>
 		    <summary><b>2024</b><br></summary>
 		  <a href="deleteItems.html" class=two>Deleting items from Recoverable Items</a><br>
-		  <a href="powershellParallel.html" class=two>PoshRSJob v PowerShell Core Parallel shootout</a>
+		  <a href="powershellParallel.html" class=two>PoshRSJob v PowerShell Core Parallel shootout</a><br>
 		  <a href="integratedApp.html" class=two>Integrated App deployment issues</a><br>
 		  <a href="mailUser.html" class=two>Mailbox appears as Mail User in O365</a><br>
 		  <a href="graphAudit.html" class=two>Graph Audit Log returns 403</a><br>
