--- a/about.html
+++ b/about.html
@@ -129,7 +129,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
            <table style='padding:4px;'>
 		   <tr><td><a href='ms-220.png' border=0><img src=ms-220.png width=65></a></td><td style='font-size 12px; width:70px;' class=tableContent>MS-220</td><td style='width:370px; font-size 12px;' class=tableContent>Exchange Online Support Engineer Speciality</td><td style='font-size 12px;' class=tableContent>November 2022</td></tr>
 		   <tr><td><a href='ms-740.png' border=0><img src=ms-740.png width=65></a></td><td style='font-size 12px;' class=tableContent>MS-740</td><td style='width:370px; font-size 12px;' class=tableContent>Teams Support Engineer Speciality</td><td style='font-size 12px;' class=tableContent>November 2022</td></tr>
-		   <tr><td><a href='az-104.png' border=0><img src=az-104.png width=65></a></td><td style='font-size 12px;' class=tableContent>AZ-104</td><td  style='width:370px; font-size 12px;' class=tableContent>Microsoft Azure Administrator</td><td style='font-size 12px;' class=tableContent>December 2022<br>(Renewed 2023, 2024)</td></tr>
+		   <tr><td><a href='az-104.png' border=0><img src=az-104.png width=65></a></td><td style='font-size 12px;' class=tableContent>AZ-104</td><td  style='width:370px; font-size 12px;' class=tableContent>Microsoft Azure Administrator</td><td style='font-size 12px;' class=tableContent>December 2022<div style='font-size 10px;'>(Renewed 2023, 2024)</div></td></tr>
 	</table>
         <br><br> 
             
