--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 		<a href='' class="dropbtn">Articles</a>
   <div class="dropdown-content" style='line-height: 1.6;'>
 	  <details open>
+		   <summary><b>2025</b><br></summary>
+		  <a href="linuxPowerShell.html" class=two>Running PowerShell on Linux v Windows</a><br>
+
+		  </details>
+	  <details>
 		    <summary><b>2024</b><br></summary>
 		  <a href="deleteItems.html" class=two>Deleting items from Recoverable Items</a><br>
 		  <a href="powershellParallel.html" class=two>PoshRSJob v PowerShell Core Parallel shootout</a><br>
@@ -146,6 +151,8 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	      <div class=headline>Articles</div>
 	      <table class=indexTable> 
 		      <br>
+ <tr><td> <br><b>2025</b></td><td></td></tr>
+	<tr><td><a href="linuxPowerShell.html" class=two>Running PowerShell on Linux v Windows</a><br></td><td>07-Feb-25</td></tr>	 
 		     <tr><td> <br><b>2024</b></td><td></td></tr>
 	<tr><td><a href="deleteItems.html" class=two>Deleting items from Recoverable Items</a><br></td><td>01-Nov-24</td></tr>	    
 	<tr><td><a href="powershellParallel.html" class=two>PoshRSJob v PowerShell Core Parallel shootout</a><br></td><td>21-Sep-24</td></tr>	      
