--- a/graphAudit.html
+++ b/graphAudit.html
@@ -78,7 +78,15 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 		<a href='' class="dropbtn">Articles</a>
   <div class="dropdown-content" style='line-height: 1.6;'>
 	  <details open>
+		   <summary><b>2025</b><br></summary>
+		  <a href="linuxPowerShell.html" class=two>Running PowerShell on Linux v Windows</a><br>
+
+		  </details>
+	  <details>
 		    <summary><b>2024</b><br></summary>
+		  <a href="deleteItems.html" class=two>Deleting items from Recoverable Items</a><br>
+		  <a href="powershellParallel.html" class=two>PoshRSJob v PowerShell Core Parallel shootout</a><br>
+		  <a href="integratedApp.html" class=two>Integrated App deployment issues</a><br>
 		  <a href="mailUser.html" class=two>Mailbox appears as Mail User in O365</a><br>
 		  <a href="graphAudit.html" class=two>Graph Audit Log returns 403</a><br>
 		  <a href="quarantineDelete.html" class=two>Mails not getting deleted from O365 Quarantine</a><br>
