--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 
 		  </details>
 	  <details open>
-		   <summary><b>2025</b><br></summary>
+		   <summary><b>2025 (1)</b><br></summary>
 		  <a href="linuxPowerShell.html" class=two>Running PowerShell on Linux v Windows</a><br>
 
 		  </details>
