--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 		      <br>
  <tr><td> <br><b>2026</b></td><td></td></tr>
 	 <tr><td><a href="RDPpassword.html" class=two>Change password via RDP</a><br></td><td>07-Jan-26</td></tr>	
-	<tr><td> <br><b>2025</b></td><td></td></tr>
-	<tr><td><a href="linuxPowerShell.html" class=two>Running PowerShell on Linux v Windows</a><br></td>td><td>07-Feb-25</td></tr>	    
+	<tr><td> <br><b>2025 (1)</b></td><td></td></tr>
+	<tr><td><a href="linuxPowerShell.html" class=two>Running PowerShell on Linux v Windows</a><br></td><td>07-Feb-25</td></tr>	    
 		     <tr><td> <br><b>2024 (33)</b></td><td></td></tr>
 	<tr><td><a href="deleteItems.html" class=two>Deleting items from Recoverable Items</a><br></td><td>01-Nov-24</td></tr>	    
 	<tr><td><a href="powershellParallel.html" class=two>PoshRSJob v PowerShell Core Parallel shootout</a><br></td><td>21-Sep-24</td></tr>	      
