--- a/RDPpassword.html
+++ b/RDPpassword.html
@@ -165,7 +165,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
         <div class=content><br>
 		Nearly every year, I find that upon returning from the Christmas break that my AD passwords have expired and need to be reset. For Citrix users, there is a prompt to change the password at logon. But what about other accounts that can only be used via RDP from within the Citrix session?<br>
 			<br>
-			When you try and connect via RDP you get a message back that your passowrd is expired and to ask your admin to reset the password, which of course is not always possible. To allow an RDP password change, you need to save the connection, eg server.rdp and then add the following line using Notepad:<br>
+			When you try and connect via RDP you get a message back that your password has expired and to ask your admin to reset the password, which of course, is not always possible. To allow an RDP password change, you need to save the connection, e.g. server.rdp and then add the following line using Notepad:<br>
 			<br>
 			<div class=code>
 				enablecredsspsupport:i:0
