--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
   <div class="dropdown-content" style='line-height: 1.6;'>
 	  	  <details open>
 		   <summary><b>2026</b><br></summary>
+			  <a href="ExcelNewline.html" class=two> Add newline to Excel via PowerShell</a><br>
 		  <a href="RDPpassword.html" class=two>Change password via RDP</a><br>
 
 		  </details>
@@ -157,6 +158,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	      <table class=indexTable> 
 		      <br>
  <tr><td> <br><b>2026</b></td><td></td></tr>
+	 <tr><td><a href="ExcelNewline.html" class=two> Add newline to Excel via PowerShell</a><br></td><td>19-Jan-26</td></tr>
 	 <tr><td><a href="RDPpassword.html" class=two>Change password via RDP</a><br></td><td>07-Jan-26</td></tr>	
 	<tr><td> <br><b>2025 (1)</b></td><td></td></tr>
 	<tr><td><a href="linuxPowerShell.html" class=two>Running PowerShell on Linux v Windows</a><br></td><td>07-Feb-25</td></tr>	    
