--- a/ExcelNewline.html
+++ b/ExcelNewline.html
@@ -80,7 +80,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 
     	   <details open>
 		   <summary><b>2026</b><br></summary>
-           <a href="ExcelNewline.html.html" class=two> Add newline to Excel via PowerShell</a><br>
+           <a href="ExcelNewline.html" class=two> Add newline to Excel via PowerShell</a><br>
 		  <a href="RDPpassword.html" class=two>Change password via RDP</a><br>
 
 		  </details>
